--- a/index.html
+++ b/index.html
@@ -54,12 +54,23 @@
            event.preventDefault();
             const el = event.currentTarget;
             // console.log(form.query.value);
-            // diable to=he search
-            el.submit.disabled = true;
+        //     // diable to=he search
+        //     el.submit.disabled = true;
+        //     // pass what the input value is to the function
+        //     const recipes = await fetchRecipes(el.query.value);
+        //     console.log(recipes);
+        //     el.submit.disabled = false;
+        //    displayRecipes(recipes.results);
+        fetchandDisplay(form.query.value);
+        }
+
+        async function fetchandDisplay(query){
+              // diable to=he search
+              form.submit.disabled = true;
             // pass what the input value is to the function
-            const recipes = await fetchRecipes(el.query.value);
+            const recipes = await fetchRecipes(query);
             console.log(recipes);
-            el.submit.disabled = false;
+            form.submit.disabled = false;
            displayRecipes(recipes.results);
         }
 
@@ -71,7 +82,7 @@ function displayRecipes(recipes){
         return `<div class="recipe">
             <h2>${recipe.title}</h2>
             <p>${recipe.ingredients}</p>
-            <a href="${recipe.href}">View recipe</p>
+            <a href="${recipe.href}">View recipe</a>
             ${recipe.thumbnail && `<img src="${recipe.thumbnail}" alt="${recipe.title}"}/>`}
             </div>`
     });
@@ -79,7 +90,8 @@ function displayRecipes(recipes){
 }
 
  form.addEventListener('submit', handleSubmit);
-        fetchRecipes();
+ //on page load run with kale
+        fetchandDisplay('kale');
     </script>
 </body>
 </html>
